--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "grunt nodeunit"
+    "test": "grunt verify"
   },
   "dependencies": {
     "grunt": "~0.4.1",
