--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
   "name": "ArteJS",
-  "version": "0.0.1",
-  "description": "arte.js is a highly configurable rich text editor",
+  "version": "0.0.3",
+  "description": "ArteJS is a highly configurable rich text editor",
   "homepage": "",
   "repository": {
     "type": "git",
     "url": "https://github.com/vistaprint/ArteJS/"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/vistaprint/ArteJS/issues"
   },
   "main": "Release",
   "engines": {
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "grunt verify"
+    "test": "grunt verify",
+    "start": "open ./Demo/Demo.html"
   },
   "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-cli": "~0.1.9",
-    "grunt-contrib-qunit": "~0.2.2",
-    "grunt-plato": "~0.2.0",
-    "qunitjs": "~1.12.0",
-    "grunt-contrib-connect": "~0.5.0"
   },
   "keywords": [
-    "javascript",
     "jquery",
-    "richtext"
+    "richtext",
+    "wysiwyg"
   ],
   "author": {
     "name": "Vistaprint",
     "url": "http://www.vistaprint.net"
   },
   "contributors": [
-	{
+    {
       "name": "Harminder Singh"
     }
   ],
-  "license": "Apache 2"
+  "license": "Apache 2",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.9",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.5.3",
+    "grunt-contrib-qunit": "~0.2.2",
+    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-jscs": "^1.0.0",
+    "grunt-plato": "~0.2.0",
+    "qunitjs": "~1.12.0"
+  }
 }
