--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-﻿language: node_js
+sudo: false
+language: node_js
 node_js:
-  - 0.8
+  - iojs
+  - "0.10"
+before_install:
+  - npm install -g grunt-cli
 before_script:
   - npm install
 script: grunt travis --verbose
