--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test": "grunt verify",
     "start": "open ./Demo/Demo.html"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "keywords": [
     "jquery",
     "richtext",
@@ -36,17 +35,15 @@
   ],
   "license": "Apache 2",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.9",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jshint": "~0.5.3",
-    "grunt-contrib-qunit": "~0.2.2",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-jscs": "^1.0.0",
-    "grunt-plato": "~0.2.0",
-    "qunitjs": "~1.12.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-qunit": "^0.5.2",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-jscs": "^1.5.0",
+    "grunt-plato": "^1.2.1",
+    "qunitjs": "^1.17.1"
   }
 }
