--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "test": "grunt",
-    "start": "open ./Demo/Demo.html"
+    "start": "open ./Demo/Demo.html",
+    "postinstall": "grunt copy"
   },
   "dependencies": {},
   "keywords": [
@@ -39,12 +40,14 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
     "load-grunt-tasks": "^3.1.0",
+    "jquery": "1.9.1",
     "qunitjs": "^1.17.1"
   }
 }
