--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
+    "load-grunt-tasks": "^3.1.0",
     "qunitjs": "^1.17.1"
   }
 }
