--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
+    "grunt-qunit-istanbul": "^0.4.7",
     "load-grunt-tasks": "^3.1.0",
     "jquery": "1.9.1",
     "qunitjs": "^1.17.1"
