--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "grunt",
     "start": "open ./Demo/Demo.html",
-    "postinstall": "grunt copy"
+    "postinstall": "grunt copy curl"
   },
   "dependencies": {},
   "keywords": [
@@ -41,11 +41,13 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-curl": "^2.1.0",
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
     "grunt-qunit-istanbul": "^0.4.7",
     "jquery": "1.9.1",
     "load-grunt-tasks": "^3.1.0",
+    "qunit-composite": "^1.0.4",
     "qunitjs": "^1.17.1",
     "rangy": "1.3.0-alpha.20140921"
   }
