Fix tests code after JSHint check

--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -9,6 +9,11 @@
   "jquery": true,
   "globals": {
     "rangy": true,
-    "Arte": true
+    "Arte": true,
+    "QUnit": true,
+    "unitTestHelper": true,
+    "TEST_ELEMENT_SELECTOR": true,
+    "TEST_ELEMENT_ID": true,
+    "ok": true
   }
 }
