--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
     "grunt-qunit-istanbul": "^0.4.7",
-    "load-grunt-tasks": "^3.1.0",
     "jquery": "1.9.1",
-    "qunitjs": "^1.17.1"
+    "load-grunt-tasks": "^3.1.0",
+    "qunitjs": "^1.17.1",
+    "rangy": "1.3.0-alpha.20140921"
   }
 }
