--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "grunt-jscs": "^1.5.0",
     "grunt-plato": "^1.2.1",
     "grunt-qunit-istanbul": "^0.4.7",
-    "jquery": "1.9.1",
+    "jquery": "^1.9.1",
     "load-grunt-tasks": "^3.1.0",
     "qunit-composite": "^1.0.4",
     "qunitjs": "^1.17.1",
